--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             margin: 0; 
             padding: 20px;
             font-family: Arial, sans-serif; 
-            background-color: #808080; /* Medium grey default */
+            background-color: #4a4a4a; /* Medium grey default */
             display: flex;
             gap: 20px;
         }
